# morser

./: README.md  pyproject.toml
.github/workflows/: test.yaml
morser/: __init__.py  cli.py  dictionary.py
tests/: conftest.py  test_cli.py  test_morser.py
