[tool.poetry]
name = "morser"
version = "0.1.0"
description = "Morse code encoder and decoder."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
