[tool.poetry]
name = "morser"
version = "0.1.0"
description = "Morse code encoder and decoder."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
morser = "morser.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"
pytest = "^7.3.1"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
